@@ -8703,7 +8703,11 @@ pub const DP_BLEND_MODE_LUMINOSITY: DP_BlendMode = 23;
 pub const DP_BLEND_MODE_COLOR: DP_BlendMode = 24;
 pub const DP_BLEND_MODE_ALPHA_DARKEN: DP_BlendMode = 25;
 pub const DP_BLEND_MODE_ALPHA_DARKEN_LERP: DP_BlendMode = 26;
-pub const DP_BLEND_MODE_LAST_EXCEPT_REPLACE: DP_BlendMode = 27;
+pub const DP_BLEND_MODE_ERASE_LIGHT: DP_BlendMode = 27;
+pub const DP_BLEND_MODE_ERASE_DARK: DP_BlendMode = 28;
+pub const DP_BLEND_MODE_LIGHT_TO_ALPHA: DP_BlendMode = 29;
+pub const DP_BLEND_MODE_DARK_TO_ALPHA: DP_BlendMode = 30;
+pub const DP_BLEND_MODE_LAST_EXCEPT_REPLACE: DP_BlendMode = 31;
 pub const DP_BLEND_MODE_COMPAT_LOCAL_MATCH: DP_BlendMode = 252;
 pub const DP_BLEND_MODE_REPLACE: DP_BlendMode = 255;
 pub const DP_BLEND_MODE_COUNT: DP_BlendMode = 256;
